# hanzidentifier

./: .flake8  .travis.yml  CHANGES.rst  LICENSE.txt  Makefile  README.md  README.rst  char_data  data.py  hanzidentifier.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml  publish.yml
src/hanzidentifier/: __init__.py  core.py  helpers.py
tests/: test_hanzidentifier.py
